docs/pages/versions/v56.0.0/sdk/ui/swift-ui/hstack.mdx
---
modificationDate: May 19, 2026
title: HStack
description: A SwiftUI HStack component for horizontal layouts.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **info** For cross-platform usage, see the universal [`Row`](../universal/row) — it renders the appropriate native component per platform.

Expo UI HStack matches the official SwiftUI [HStack API](https://developer.apple.com/documentation/swiftui/hstack) and arranges its children horizontally.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/hstack/ios-light.webp"
  darkSrc="/static/images/expo-ui/hstack/ios-dark.webp"
  alt="Four numbered colored rounded squares arranged horizontally in an HStack"
/>

## Installation

<APIInstallSection />

## Usage

### Basic horizontal stack

```tsx BasicHStackExample.tsx
import { Host, HStack, Text } from '@expo/ui/swift-ui';

export default function BasicHStackExample() {
  return (
    <Host matchContents>
      <HStack spacing={12}>
        <Text>First</Text>
        <Text>Second</Text>
        <Text>Third</Text>
      </HStack>
    </Host>
  );
}
```

### With alignment

The `alignment` prop controls vertical alignment of children. Available options are: `top`, `center`, `bottom`, `firstTextBaseline`, and `lastTextBaseline`.

```tsx HStackAlignmentExample.tsx
import { Host, HStack, Rectangle } from '@expo/ui/swift-ui';
import { frame } from '@expo/ui/swift-ui/modifiers';

export default function HStackAlignmentExample() {
  return (
    <Host matchContents>
      <HStack spacing={12} alignment="top">
        <Rectangle modifiers={[frame({ width: 50, height: 50 })]} />
        <Rectangle modifiers={[frame({ width: 50, height: 100 })]} />
        <Rectangle modifiers={[frame({ width: 50, height: 75 })]} />
      </HStack>
    </Host>
  );
}
```

## API

```tsx
import { HStack } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/hstack" apiName="HStack" />
