docs/pages/versions/v57.0.0/sdk/ui/swift-ui/hstack.mdx
---
title: HStack
description: A SwiftUI HStack component for horizontal layouts.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **info** For cross-platform usage, see the universal [`Row`](../universal/row) — it renders the appropriate native component per platform.

Expo UI HStack matches the official SwiftUI [HStack API](https://developer.apple.com/documentation/swiftui/hstack) and arranges its children horizontally.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/hstack/ios-light.webp"
  darkSrc="/static/images/expo-ui/hstack/ios-dark.webp"
  alt="Four numbered colored rounded squares arranged horizontally in an HStack"
/>

## Installation

<APIInstallSection />

## Usage

### Basic horizontal stack

<ComponentExample
  title="BasicHStackExample.tsx"
  src="/static/images/expo-ui/examples/hstack-basic-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/hstack-basic-ios-dark.webp"
  alt="First, Second, and Third text items arranged horizontally in an HStack">

```tsx
import { Host, HStack, Text } from '@expo/ui/swift-ui';

export default function BasicHStackExample() {
  return (
    <Host style={{ flex: 1 }}>
      <HStack spacing={12}>
        <Text>First</Text>
        <Text>Second</Text>
        <Text>Third</Text>
      </HStack>
    </Host>
  );
}
```

</ComponentExample>

### With alignment

The `alignment` prop controls vertical alignment of children. Available options are: `top`, `center`, `bottom`, `firstTextBaseline`, and `lastTextBaseline`.

<ComponentExample
  title="HStackAlignmentExample.tsx"
  src="/static/images/expo-ui/examples/hstack-alignment-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/hstack-alignment-ios-dark.webp"
  alt="Three rectangles of different heights aligned to the top edge in an HStack">

```tsx
import { Host, HStack, Rectangle } from '@expo/ui/swift-ui';
import { frame } from '@expo/ui/swift-ui/modifiers';

export default function HStackAlignmentExample() {
  return (
    <Host style={{ flex: 1 }}>
      <HStack spacing={12} alignment="top">
        <Rectangle modifiers={[frame({ width: 50, height: 50 })]} />
        <Rectangle
          modifiers={[frame({ width: 50, height: 100 })]}
        />
        <Rectangle modifiers={[frame({ width: 50, height: 75 })]} />
      </HStack>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { HStack } from '@expo/ui/swift-ui';
```

<APISection
  packageName="expo-ui/swift-ui/hstack"
  apiName="HStack"
/>
